config/pushgateway/pushgateway.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pushgateway
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: pushgateway
    weight: 100
  wildcardPolicy: None
---
kind: Service
apiVersion: v1
metadata:
  name: pushgateway
spec:
  ports:
    - name: http
      protocol: TCP
      port: 9091
      targetPort: 9091
  selector:
    app: pushgateway
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pushgateway
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: pushgateway
  template:
    metadata:
      labels:
        app: pushgateway
    spec:
      containers:
        - name: pushgateway
          image: quay.io/prometheus/pushgateway:latest
          ports:
            - containerPort: 9091
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              cpu: 20m
              memory: 200Mi
          imagePullPolicy: Always
      restartPolicy: Always
